# grace

./: .env.example  .env.sample  .gitignore  AGENTS.md  CONTRACTS.md  Grace_Three_Agent_Execution_Ready_Technical_Specification.docx  README.md  dusk-linen.html  index.html  package.json  pyproject.toml  qa.js  realqa.mjs  requirements.txt
agents/: README.md  grace-caller-v1.md  grace-closer-v1.md  grace-intake-v1.md  intake.json  nego.json  quote.json  report.json  tool-schemas.json  workspace.json
app/: __init__.py  calls.py  config.py  elevenlabs_client.py  extraction.py  main.py  report.py  report_call.py  research.py  state_machine.py  storage.py  strategy.py  web_api.py  webhook.py
app/static/: index.html
docs/: acceptance-checklist.md  architecture.md  compliance.md  data-model-full.md  deploy-remote.md  runbook.md  telephony-canary.md  v0-instruction.md
prompts/: extract_final_price.md  extract_quote.md  extract_user_info.md  intake_agent.md  negotiation_agent.md  quote_agent.md  report.md  report_agent.md  report_speech.md  strategy.md
scripts/: deploy_agents.py
supabase/functions/: deno.json
supabase/migrations/: 0001_init.sql  0002_seed.sql
tests/: README.md  deno.json  test_admin_dashboard.py  test_call_failure.py  test_landing.py  test_nego_leverage.py  test_report_call.py
tests/contract/: casespec_test.ts  invariants_test.ts  sms_routing_test.ts  webhook_replay_test.ts
tests/golden/: fixtures.json  scenarios.md
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  main.tsx  (+3 more)
(+63 files in other folders)
